// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`symbols component > ctrl+/ cycles symbol type filter and reloads > renders with type filter in title > after cycle - all filter 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Symbols [*] (4/4)[0m          [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m ./agent/extensions/ide/lib/list-picker.ts[0m       [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m 󰠱 ListPickerComponent [38;2;76;62;118magent[39m[22m[39m[49m[38;2;250;208;0m│[39m[0m  [0m                                               [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 createFilesComponent [38;2;76;62;118magen[39m[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mconstructor[39m[38;2;225;228;232m([39m[0m                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰆧 render [38;2;76;62;118magent/extensions/i[39m[38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m    [39m[38;2;249;117;131mprivate[39m[38;2;225;228;232m [39m[38;2;255;171;112mtui[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mListPickerTui[39m[38;2;225;228;232m,[39m[39m[0m                [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰙅 SymbolType [38;2;76;62;118magent/extensio[39m[38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m    [39m[38;2;249;117;131mprivate[39m[38;2;225;228;232m [39m[38;2;255;171;112mtheme[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mRecord[39m[38;2;225;228;232m<[39m[38;2;121;184;255mstring[39m[38;2;225;228;232m, [39m[38;2;121;184;255munknown[39m[38;2;225;228;232m>,[39m[39m[0m    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m    [39m[38;2;249;117;131mprivate[39m[38;2;225;228;232m [39m[38;2;255;171;112mconfig[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mListPickerConfig[39m[38;2;225;228;232m<[39m[38;2;121;184;255munknown[39m[38;2;225;228;232m>,[39m[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m  ) {[39m[39m[0m                                          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m    [39m[38;2;249;117;131mvoid[39m[38;2;225;228;232m [39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.[39m[38;2;179;146;240mloadItems[39m[38;2;225;228;232m();[39m[39m[0m                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m  }[39m[39m[0m                                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[39m[0m                                               [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m  [39m[38;2;249;117;131mprivate[39m[38;2;225;228;232m [39m[38;2;249;117;131masync[39m[38;2;225;228;232m [39m[38;2;179;146;240mloadItems[39m[38;2;225;228;232m()[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mPromise[39m[38;2;225;228;232m<[39m[38;2;121;184;255mvoid[39m[38;2;225;228;232m> {[39m[39m[0m   [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m    [39m[38;2;249;117;131mtry[39m[38;2;225;228;232m {[39m[39m[0m                                      [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m      [39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.items [39m[38;2;249;117;131m=[39m[38;2;225;228;232m [39m[38;2;249;117;131mawait[39m[38;2;225;228;232m [39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.config.[39m[38;2;179;146;240mloadItems[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m      [39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.filteredItems [39m[38;2;249;117;131m=[39m[38;2;225;228;232m [[39m[38;2;249;117;131m...[39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.items];[39m[39m[0m    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m      [39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.loading [39m[38;2;249;117;131m=[39m[38;2;225;228;232m [39m[38;2;121;184;255mfalse[39m[38;2;225;228;232m;[39m[39m[0m                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m      [39m[38;2;249;117;131mif[39m[38;2;225;228;232m ([39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.filteredItems.[39m[38;2;121;184;255mlength[39m[38;2;225;228;232m [39m[38;2;249;117;131m>[39m[38;2;225;228;232m [39m[38;2;121;184;255m0[39m[38;2;225;228;232m) {[39m[39m[0m     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m        [39m[38;2;249;117;131mvoid[39m[38;2;225;228;232m [39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.[39m[38;2;179;146;240mloadPreview[39m[38;2;225;228;232m([39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.filteredIte[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m      }[39m[39m[0m                                        [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m    } [39m[38;2;249;117;131mcatch[39m[38;2;225;228;232m (err) {[39m[39m[0m                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m      console.[39m[38;2;179;146;240merror[39m[38;2;225;228;232m([39m[38;2;158;203;255m"Failed to load items"[39m[38;2;225;228;232m, er[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m    }[39m[39m[0m                                          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m  }[39m[39m[0m                                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[39m[0m                                               [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m  [39m[38;2;249;117;131mprivate[39m[38;2;225;228;232m [39m[38;2;249;117;131masync[39m[38;2;225;228;232m [39m[38;2;179;146;240mloadPreview[39m[38;2;225;228;232m([39m[38;2;255;171;112mitem[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255munknown[39m[38;2;225;228;232m)[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mPr[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m    [39m[38;2;249;117;131mif[39m[38;2;225;228;232m ([39m[38;2;249;117;131m![39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.config.loadPreview) [39m[38;2;249;117;131mreturn[39m[38;2;225;228;232m;[39m[39m[0m      [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  ctrl+e edit  ctrl+i insert  ctrl+t callers  ctrl+y types  ctrl+j calle[39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`symbols component > ctrl+/ cycles symbol type filter and reloads > renders with type filter in title > after cycle - enum filter 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Symbols [enum] (2/2)[0m       [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m ./agent/extensions/ide/components/symbols/types[0m [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m 󰙅 SymbolType [38;2;76;62;118magent/extensio[39m[22m[39m[49m[38;2;250;208;0m│[39m[0m  [0m                                               [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰙅 FocusState [38;2;76;62;118magent/extensio[39m[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mconstructor[39m[38;2;225;228;232m([39m[0m                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    [39m[38;2;249;117;131mprivate[39m[38;2;225;228;232m [39m[38;2;255;171;112mtui[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mListPickerTui[39m[38;2;225;228;232m,[39m[0m                [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    [39m[38;2;249;117;131mprivate[39m[38;2;225;228;232m [39m[38;2;255;171;112mtheme[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mRecord[39m[38;2;225;228;232m<[39m[38;2;121;184;255mstring[39m[38;2;225;228;232m, [39m[38;2;121;184;255munknown[39m[38;2;225;228;232m>,[39m[0m    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    [39m[38;2;249;117;131mprivate[39m[38;2;225;228;232m [39m[38;2;255;171;112mconfig[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mListPickerConfig[39m[38;2;225;228;232m<[39m[38;2;121;184;255munknown[39m[38;2;225;228;232m>,[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  ) {[39m[0m                                          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    [39m[38;2;249;117;131mvoid[39m[38;2;225;228;232m [39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.[39m[38;2;179;146;240mloadItems[39m[38;2;225;228;232m();[39m[0m                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  }[39m[0m                                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [0m                                               [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mprivate[39m[38;2;225;228;232m [39m[38;2;249;117;131masync[39m[38;2;225;228;232m [39m[38;2;179;146;240mloadItems[39m[38;2;225;228;232m()[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mPromise[39m[38;2;225;228;232m<[39m[38;2;121;184;255mvoid[39m[38;2;225;228;232m> {[39m[0m   [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    [39m[38;2;249;117;131mtry[39m[38;2;225;228;232m {[39m[0m                                      [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m      [39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.items [39m[38;2;249;117;131m=[39m[38;2;225;228;232m [39m[38;2;249;117;131mawait[39m[38;2;225;228;232m [39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.config.[39m[38;2;179;146;240mloadItems[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m      [39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.filteredItems [39m[38;2;249;117;131m=[39m[38;2;225;228;232m [[39m[38;2;249;117;131m...[39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.items];[39m[0m    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m      [39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.loading [39m[38;2;249;117;131m=[39m[38;2;225;228;232m [39m[38;2;121;184;255mfalse[39m[38;2;225;228;232m;[39m[0m                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m      [39m[38;2;249;117;131mif[39m[38;2;225;228;232m ([39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.filteredItems.[39m[38;2;121;184;255mlength[39m[38;2;225;228;232m [39m[38;2;249;117;131m>[39m[38;2;225;228;232m [39m[38;2;121;184;255m0[39m[38;2;225;228;232m) {[39m[0m     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m        [39m[38;2;249;117;131mvoid[39m[38;2;225;228;232m [39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.[39m[38;2;179;146;240mloadPreview[39m[38;2;225;228;232m([39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.filteredIte[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m      }[39m[0m                                        [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    } [39m[38;2;249;117;131mcatch[39m[38;2;225;228;232m (err) {[39m[0m                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m      console.[39m[38;2;179;146;240merror[39m[38;2;225;228;232m([39m[38;2;158;203;255m"Failed to load items"[39m[38;2;225;228;232m, er[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    }[39m[0m                                          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  }[39m[0m                                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [0m                                               [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mprivate[39m[38;2;225;228;232m [39m[38;2;249;117;131masync[39m[38;2;225;228;232m [39m[38;2;179;146;240mloadPreview[39m[38;2;225;228;232m([39m[38;2;255;171;112mitem[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255munknown[39m[38;2;225;228;232m)[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mPr[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    [39m[38;2;249;117;131mif[39m[38;2;225;228;232m ([39m[38;2;249;117;131m![39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.config.loadPreview) [39m[38;2;249;117;131mreturn[39m[38;2;225;228;232m;[39m[0m      [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  ctrl+e edit  ctrl+i insert  ctrl+t callers  ctrl+y types  ctrl+j calle[39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`symbols component > ctrl+/ cycles symbol type filter and reloads > renders with type filter in title > after cycle - function filter 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Symbols [function] (2/2)[0m   [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m ./agent/extensions/ide/components/files/files.t[0m [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m 󰊕 createFilesComponent [38;2;76;62;118magen[39m[22m[39m[49m[38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[39m[0m                                               [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 createSymbolsComponent [38;2;76;62;118mag[39m[38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m  [39m[38;2;249;117;131mconstructor[39m[38;2;225;228;232m([39m[39m[0m                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m    [39m[38;2;249;117;131mprivate[39m[38;2;225;228;232m [39m[38;2;255;171;112mtui[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mListPickerTui[39m[38;2;225;228;232m,[39m[39m[0m                [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m    [39m[38;2;249;117;131mprivate[39m[38;2;225;228;232m [39m[38;2;255;171;112mtheme[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mRecord[39m[38;2;225;228;232m<[39m[38;2;121;184;255mstring[39m[38;2;225;228;232m, [39m[38;2;121;184;255munknown[39m[38;2;225;228;232m>,[39m[39m[0m    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m    [39m[38;2;249;117;131mprivate[39m[38;2;225;228;232m [39m[38;2;255;171;112mconfig[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mListPickerConfig[39m[38;2;225;228;232m<[39m[38;2;121;184;255munknown[39m[38;2;225;228;232m>,[39m[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m  ) {[39m[39m[0m                                          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m    [39m[38;2;249;117;131mvoid[39m[38;2;225;228;232m [39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.[39m[38;2;179;146;240mloadItems[39m[38;2;225;228;232m();[39m[39m[0m                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m  }[39m[39m[0m                                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[39m[0m                                               [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m  [39m[38;2;249;117;131mprivate[39m[38;2;225;228;232m [39m[38;2;249;117;131masync[39m[38;2;225;228;232m [39m[38;2;179;146;240mloadItems[39m[38;2;225;228;232m()[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mPromise[39m[38;2;225;228;232m<[39m[38;2;121;184;255mvoid[39m[38;2;225;228;232m> {[39m[39m[0m   [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m    [39m[38;2;249;117;131mtry[39m[38;2;225;228;232m {[39m[39m[0m                                      [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m      [39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.items [39m[38;2;249;117;131m=[39m[38;2;225;228;232m [39m[38;2;249;117;131mawait[39m[38;2;225;228;232m [39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.config.[39m[38;2;179;146;240mloadItems[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m      [39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.filteredItems [39m[38;2;249;117;131m=[39m[38;2;225;228;232m [[39m[38;2;249;117;131m...[39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.items];[39m[39m[0m    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m      [39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.loading [39m[38;2;249;117;131m=[39m[38;2;225;228;232m [39m[38;2;121;184;255mfalse[39m[38;2;225;228;232m;[39m[39m[0m                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m      [39m[38;2;249;117;131mif[39m[38;2;225;228;232m ([39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.filteredItems.[39m[38;2;121;184;255mlength[39m[38;2;225;228;232m [39m[38;2;249;117;131m>[39m[38;2;225;228;232m [39m[38;2;121;184;255m0[39m[38;2;225;228;232m) {[39m[39m[0m     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m        [39m[38;2;249;117;131mvoid[39m[38;2;225;228;232m [39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.[39m[38;2;179;146;240mloadPreview[39m[38;2;225;228;232m([39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.filteredIte[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m      }[39m[39m[0m                                        [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m    } [39m[38;2;249;117;131mcatch[39m[38;2;225;228;232m (err) {[39m[39m[0m                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m      console.[39m[38;2;179;146;240merror[39m[38;2;225;228;232m([39m[38;2;158;203;255m"Failed to load items"[39m[38;2;225;228;232m, er[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    }[39m[0m                                          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  }[39m[0m                                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [0m                                               [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mprivate[39m[38;2;225;228;232m [39m[38;2;249;117;131masync[39m[38;2;225;228;232m [39m[38;2;179;146;240mloadPreview[39m[38;2;225;228;232m([39m[38;2;255;171;112mitem[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255munknown[39m[38;2;225;228;232m)[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mPr[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    [39m[38;2;249;117;131mif[39m[38;2;225;228;232m ([39m[38;2;249;117;131m![39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.config.loadPreview) [39m[38;2;249;117;131mreturn[39m[38;2;225;228;232m;[39m[0m      [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  ctrl+e edit  ctrl+i insert  ctrl+t callers  ctrl+y types  ctrl+j calle[39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`symbols component > ctrl+/ cycles symbol type filter and reloads > renders with type filter in title > after cycle - method filter 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Symbols [method] (2/2)[0m     [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m ./agent/extensions/ide/lib/split-panel/renderer[0m [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m 󰆧 render [38;2;76;62;118magent/extensions/i[39m[22m[39m[49m[38;2;250;208;0m│[39m[0m  [0m                                               [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰆧 handleInput [38;2;76;62;118magent/extensi[39m[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mconstructor[39m[38;2;225;228;232m([39m[0m                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    [39m[38;2;249;117;131mprivate[39m[38;2;225;228;232m [39m[38;2;255;171;112mtui[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mListPickerTui[39m[38;2;225;228;232m,[39m[0m                [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    [39m[38;2;249;117;131mprivate[39m[38;2;225;228;232m [39m[38;2;255;171;112mtheme[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mRecord[39m[38;2;225;228;232m<[39m[38;2;121;184;255mstring[39m[38;2;225;228;232m, [39m[38;2;121;184;255munknown[39m[38;2;225;228;232m>,[39m[0m    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    [39m[38;2;249;117;131mprivate[39m[38;2;225;228;232m [39m[38;2;255;171;112mconfig[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mListPickerConfig[39m[38;2;225;228;232m<[39m[38;2;121;184;255munknown[39m[38;2;225;228;232m>,[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  ) {[39m[0m                                          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    [39m[38;2;249;117;131mvoid[39m[38;2;225;228;232m [39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.[39m[38;2;179;146;240mloadItems[39m[38;2;225;228;232m();[39m[0m                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  }[39m[0m                                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [0m                                               [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mprivate[39m[38;2;225;228;232m [39m[38;2;249;117;131masync[39m[38;2;225;228;232m [39m[38;2;179;146;240mloadItems[39m[38;2;225;228;232m()[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mPromise[39m[38;2;225;228;232m<[39m[38;2;121;184;255mvoid[39m[38;2;225;228;232m> {[39m[0m   [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    [39m[38;2;249;117;131mtry[39m[38;2;225;228;232m {[39m[0m                                      [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m      [39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.items [39m[38;2;249;117;131m=[39m[38;2;225;228;232m [39m[38;2;249;117;131mawait[39m[38;2;225;228;232m [39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.config.[39m[38;2;179;146;240mloadItems[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m      [39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.filteredItems [39m[38;2;249;117;131m=[39m[38;2;225;228;232m [[39m[38;2;249;117;131m...[39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.items];[39m[0m    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m      [39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.loading [39m[38;2;249;117;131m=[39m[38;2;225;228;232m [39m[38;2;121;184;255mfalse[39m[38;2;225;228;232m;[39m[0m                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m      [39m[38;2;249;117;131mif[39m[38;2;225;228;232m ([39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.filteredItems.[39m[38;2;121;184;255mlength[39m[38;2;225;228;232m [39m[38;2;249;117;131m>[39m[38;2;225;228;232m [39m[38;2;121;184;255m0[39m[38;2;225;228;232m) {[39m[0m     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m        [39m[38;2;249;117;131mvoid[39m[38;2;225;228;232m [39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.[39m[38;2;179;146;240mloadPreview[39m[38;2;225;228;232m([39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.filteredIte[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m      }[39m[0m                                        [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    } [39m[38;2;249;117;131mcatch[39m[38;2;225;228;232m (err) {[39m[0m                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m      console.[39m[38;2;179;146;240merror[39m[38;2;225;228;232m([39m[38;2;158;203;255m"Failed to load items"[39m[38;2;225;228;232m, er[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    }[39m[0m                                          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  }[39m[0m                                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [0m                                               [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mprivate[39m[38;2;225;228;232m [39m[38;2;249;117;131masync[39m[38;2;225;228;232m [39m[38;2;179;146;240mloadPreview[39m[38;2;225;228;232m([39m[38;2;255;171;112mitem[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255munknown[39m[38;2;225;228;232m)[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mPr[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    [39m[38;2;249;117;131mif[39m[38;2;225;228;232m ([39m[38;2;249;117;131m![39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.config.loadPreview) [39m[38;2;249;117;131mreturn[39m[38;2;225;228;232m;[39m[0m      [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  ctrl+e edit  ctrl+i insert  ctrl+t callers  ctrl+y types  ctrl+j calle[39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`symbols component > ctrl+/ cycles symbol type filter and reloads > renders with type filter in title > initial - class filter 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Symbols [class] (2/2)[0m      [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m ./agent/extensions/ide/lib/list-picker.ts[0m       [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m 󰠱 ListPickerComponent [38;2;76;62;118magent[39m[22m[39m[49m[38;2;250;208;0m│[39m[0m  [0m                                               [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰠱 SplitPanel [38;2;76;62;118magent/extensio[39m[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mconstructor[39m[38;2;225;228;232m([39m[0m                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m    [39m[38;2;249;117;131mprivate[39m[38;2;225;228;232m [39m[38;2;255;171;112mtui[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mListPickerTui[39m[38;2;225;228;232m,[39m[39m[0m                [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m    [39m[38;2;249;117;131mprivate[39m[38;2;225;228;232m [39m[38;2;255;171;112mtheme[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mRecord[39m[38;2;225;228;232m<[39m[38;2;121;184;255mstring[39m[38;2;225;228;232m, [39m[38;2;121;184;255munknown[39m[38;2;225;228;232m>,[39m[39m[0m    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m    [39m[38;2;249;117;131mprivate[39m[38;2;225;228;232m [39m[38;2;255;171;112mconfig[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mListPickerConfig[39m[38;2;225;228;232m<[39m[38;2;121;184;255munknown[39m[38;2;225;228;232m>,[39m[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m  ) {[39m[39m[0m                                          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m    [39m[38;2;249;117;131mvoid[39m[38;2;225;228;232m [39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.[39m[38;2;179;146;240mloadItems[39m[38;2;225;228;232m();[39m[39m[0m                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m  }[39m[39m[0m                                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[39m[0m                                               [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m  [39m[38;2;249;117;131mprivate[39m[38;2;225;228;232m [39m[38;2;249;117;131masync[39m[38;2;225;228;232m [39m[38;2;179;146;240mloadItems[39m[38;2;225;228;232m()[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mPromise[39m[38;2;225;228;232m<[39m[38;2;121;184;255mvoid[39m[38;2;225;228;232m> {[39m[39m[0m   [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m    [39m[38;2;249;117;131mtry[39m[38;2;225;228;232m {[39m[39m[0m                                      [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m      [39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.items [39m[38;2;249;117;131m=[39m[38;2;225;228;232m [39m[38;2;249;117;131mawait[39m[38;2;225;228;232m [39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.config.[39m[38;2;179;146;240mloadItems[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m      [39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.filteredItems [39m[38;2;249;117;131m=[39m[38;2;225;228;232m [[39m[38;2;249;117;131m...[39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.items];[39m[39m[0m    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m      [39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.loading [39m[38;2;249;117;131m=[39m[38;2;225;228;232m [39m[38;2;121;184;255mfalse[39m[38;2;225;228;232m;[39m[39m[0m                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m      [39m[38;2;249;117;131mif[39m[38;2;225;228;232m ([39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.filteredItems.[39m[38;2;121;184;255mlength[39m[38;2;225;228;232m [39m[38;2;249;117;131m>[39m[38;2;225;228;232m [39m[38;2;121;184;255m0[39m[38;2;225;228;232m) {[39m[39m[0m     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m        [39m[38;2;249;117;131mvoid[39m[38;2;225;228;232m [39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.[39m[38;2;179;146;240mloadPreview[39m[38;2;225;228;232m([39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.filteredIte[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m      }[39m[39m[0m                                        [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m    } [39m[38;2;249;117;131mcatch[39m[38;2;225;228;232m (err) {[39m[39m[0m                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m      console.[39m[38;2;179;146;240merror[39m[38;2;225;228;232m([39m[38;2;158;203;255m"Failed to load items"[39m[38;2;225;228;232m, er[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m    }[39m[39m[0m                                          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m  }[39m[39m[0m                                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[39m[0m                                               [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m  [39m[38;2;249;117;131mprivate[39m[38;2;225;228;232m [39m[38;2;249;117;131masync[39m[38;2;225;228;232m [39m[38;2;179;146;240mloadPreview[39m[38;2;225;228;232m([39m[38;2;255;171;112mitem[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255munknown[39m[38;2;225;228;232m)[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mPr[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;225;228;232m    [39m[38;2;249;117;131mif[39m[38;2;225;228;232m ([39m[38;2;249;117;131m![39m[38;2;121;184;255mthis[39m[38;2;225;228;232m.config.loadPreview) [39m[38;2;249;117;131mreturn[39m[38;2;225;228;232m;[39m[39m[0m      [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  ctrl+e edit  ctrl+i insert  ctrl+t callers  ctrl+y types  ctrl+j calle[39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;
